Updated Property-handling for PDF-Target

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -3,10 +3,27 @@
 # Additional keys:
 #
 com.jrefinery.report.LogLevel=Debug
-com.jrefinery.report.targets.PDFOutputTarget.ENCODING=iso-8859-1
-com.jrefinery.report.targets.PDFOutputTarget.default.AllowPrinting=true
+#com.jrefinery.report.LogTarget
+#com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT
+#com.jrefinery.report.targets.PDFOutputTarget.ENCODING=iso-8859-1
+#com.jrefinery.report.targets.PDFOutputTarget.default.AllowPrinting=true
+
+#com.jrefinery.report.dtd
+#com.jrefinery.report.TableFactoryMode
+
 #
 # The PDFTarget can be configured using these properties. This will create a default configuration
 # which can be altered by the programm using the usual operations.
 #
-#com.jrefinery.report.targets.PDFOutputTarget.default.AllowCopy=false
+#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowCopy=false
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowPrinting
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyContents
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyAnnotations
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowFillIn
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowScreenReaders
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowAssembly
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowDegradedPrinting
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption
+#com.jrefinery.report.PrintOperationComment
+com.jrefinery.report.WarnInvalidColumns
+com.jrefinery.report.NoDefaultDebug
