Documented all available properties

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -2,28 +2,95 @@
 # see source of class com.jrefinery.report.util.ReportConfiguration for keys
 # Additional keys:
 #
-com.jrefinery.report.LogLevel=Debug
-#com.jrefinery.report.LogTarget
-#com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT
-#com.jrefinery.report.targets.PDFOutputTarget.ENCODING=iso-8859-1
-#com.jrefinery.report.targets.PDFOutputTarget.default.AllowPrinting=true
 
-#com.jrefinery.report.dtd
-#com.jrefinery.report.TableFactoryMode
+#
+# The minimum loglevel that is logged
+com.jrefinery.report.LogLevel=Debug
+
+#
+# Where to log. Give a classname of a  valid LogTarget implementation.
+#com.jrefinery.report.LogTarget=com.jrefinery.report.util.SystemOutLogTarget
+
+#
+# AutoInit the PDFTarget? Searches and registers all ttf-fonts on the system
+#com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT
+
+#
+# The default font-encoding for the OutputTarget.
+# Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
+#com.jrefinery.report.targets.PDFOutputTarget.ENCODING=iso-8859-1
+
+#
+# A URL to the JFreeReport-DTD if not specified in the Document
+#com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
+
+#
+# The tablemodel factory mode for the ResultSetTableModelFactory
+# if set to "simple" the factory will always return a DefaultTableModel
+#com.jrefinery.report.TableFactoryMode=simple
+
+#
+# Should the logical page add comments to the generated PhysicalOperations? This is
+# for debuggin only.
+#com.jrefinery.report.PrintOperationComment
+
+#
+# Should the datarow print warning on invalid columns? Invalid column requests always
+# return null, if set to true, an additional logging entry is added
+com.jrefinery.report.WarnInvalidColumns
+
+#
+# Should the debugging system be disabled by default. This option will surpress all
+# output, no single line of debug information will be printed. If you want to remove
+# System.out-debugging on the server side, try to switch to a Log4J-LogTarget instead.
+com.jrefinery.report.NoDefaultDebug
 
 #
 # The PDFTarget can be configured using these properties. This will create a default configuration
 # which can be altered by the programm using the usual operations.
 #
+
+###########################################################################################
+### PDF Security flags are only used with security enabled and a password set #############
+###########################################################################################
+
+#
+# Should the PDF Security setting allow printing of the document by default
+#com.jrefinery.report.targets.PDFOutputTarget.default.AllowPrinting=true
+
+#
+# Should the PDF Security setting allow copying of the document's contents by default
 #com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowCopy=false
+
+#
+# Should the PDF Security setting allow printing of the document's contents by default
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowPrinting
+
+#
+# Should the PDF Security setting allow modifying of the document by default
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyContents
+
+#
+# Should the PDF Security setting allow document annotations by default
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyAnnotations
+
+#
+# Should the PDF Security setting allow the fill-in of document forms (inputfields etc).
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowFillIn
+
+#
+# Should the PDF Security setting allow access for screenreaders by default
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowScreenReaders
+
+#
+# Should the PDF Security setting allow re(assembly) of the document by default
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowAssembly
+
+#
+# Should the PDF Security setting allow low quality printing of the document's contents by default
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowDegradedPrinting
+
+#
+# Should the PDF file be encrypted by default? Set to "none" "40bit" "128bit"
 com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption
-#com.jrefinery.report.PrintOperationComment
-com.jrefinery.report.WarnInvalidColumns
-com.jrefinery.report.NoDefaultDebug
+
