--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -13,7 +13,7 @@ com.jrefinery.report.LogLevel=Debug
 
 #
 # AutoInit the PDFTarget? Searches and registers all ttf-fonts on the system
-#com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT
+#com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT=true
 
 #
 # The default font-encoding for the OutputTarget.
@@ -32,18 +32,18 @@ com.jrefinery.report.LogLevel=Debug
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
 # for debuggin only.
-#com.jrefinery.report.PrintOperationComment
+com.jrefinery.report.PrintOperationComment=true
 
 #
 # Should the datarow print warning on invalid columns? Invalid column requests always
 # return null, if set to true, an additional logging entry is added
-com.jrefinery.report.WarnInvalidColumns
+com.jrefinery.report.WarnInvalidColumns=true
 
 #
 # Should the debugging system be disabled by default. This option will surpress all
 # output, no single line of debug information will be printed. If you want to remove
 # System.out-debugging on the server side, try to switch to a Log4J-LogTarget instead.
-com.jrefinery.report.NoDefaultDebug
+com.jrefinery.report.NoDefaultDebug=false
 
 #
 # The PDFTarget can be configured using these properties. This will create a default configuration
@@ -56,41 +56,54 @@ com.jrefinery.report.NoDefaultDebug
 
 #
 # Should the PDF Security setting allow printing of the document by default
-#com.jrefinery.report.targets.PDFOutputTarget.default.AllowPrinting=true
+com.jrefinery.report.targets.PDFOutputTarget.default.AllowPrinting=false
 
 #
 # Should the PDF Security setting allow copying of the document's contents by default
-#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowCopy=false
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowCopy=false
 
 #
 # Should the PDF Security setting allow printing of the document's contents by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowPrinting
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowPrinting=false
 
 #
 # Should the PDF Security setting allow modifying of the document by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyContents
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyContents=false
 
 #
 # Should the PDF Security setting allow document annotations by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyAnnotations
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyAnnotations=false
 
 #
 # Should the PDF Security setting allow the fill-in of document forms (inputfields etc).
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowFillIn
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowFillIn=false
 
 #
 # Should the PDF Security setting allow access for screenreaders by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowScreenReaders
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowScreenReaders=false
 
 #
 # Should the PDF Security setting allow re(assembly) of the document by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowAssembly
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowAssembly=false
 
 #
 # Should the PDF Security setting allow low quality printing of the document's contents by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowDegradedPrinting
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowDegradedPrinting=false
 
 #
 # Should the PDF file be encrypted by default? Set to "none" "40bit" "128bit"
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption=none
+
+#
+# Warning: Specifying passwords in the property file can introduce a security risk.
+# Do not use these settings on the client side or in unprotected (world-readable) server environments.
+# In these cases use other means of defining the password. 
+
+#
+# The default user password for the document.
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption="password"
+
+#
+# The default owner password for the document.
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption="password"
 
