more Properties changes. Added ReportConfiguration definiton to the XML-Parser (see report1.xml). BugFix: DocumentMetaData was not added to the PDFDocument

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -4,6 +4,10 @@
 #
 
 #
+# Global Configuration: These keys affect the whole VM and cannot be changed once
+# they are configured unless the VM is restarted.
+
+#
 # The minimum loglevel that is logged
 com.jrefinery.report.LogLevel=Debug
 
@@ -16,28 +20,23 @@ com.jrefinery.report.LogLevel=Debug
 #com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT=true
 
 #
-# The default font-encoding for the OutputTarget.
-# Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
-#com.jrefinery.report.targets.PDFOutputTarget.ENCODING=iso-8859-1
-
-#
 # A URL to the JFreeReport-DTD if not specified in the Document
 #com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
 
-#
-# The tablemodel factory mode for the ResultSetTableModelFactory
-# if set to "simple" the factory will always return a DefaultTableModel
-#com.jrefinery.report.TableFactoryMode=simple
 
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
 # for debuggin only.
-com.jrefinery.report.PrintOperationComment=true
+com.jrefinery.report.PrintOperationComment=false
 
 #
 # Should the datarow print warning on invalid columns? Invalid column requests always
 # return null, if set to true, an additional logging entry is added
 com.jrefinery.report.WarnInvalidColumns=true
+#
+# The tablemodel factory mode for the ResultSetTableModelFactory
+# if set to "simple" the factory will always return a DefaultTableModel
+#com.jrefinery.report.TableFactoryMode=simple
 
 #
 # Should the debugging system be disabled by default. This option will surpress all
@@ -46,9 +45,22 @@ com.jrefinery.report.WarnInvalidColumns=true
 com.jrefinery.report.NoDefaultDebug=false
 
 #
+# Local configuration keys:
+# The following keys can be redefined for all report-instances.
+
+#
 # The PDFTarget can be configured using these properties. This will create a default configuration
 # which can be altered by the programm using the usual operations.
 #
+
+#
+# The default font-encoding for the OutputTarget.
+# Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encoding=iso-8859-1
+
+#
+# The author string of the document.
+#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Author=user
 
 ###########################################################################################
 ### PDF Security flags are only used with security enabled and a password set #############
@@ -101,9 +113,9 @@ com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption=
 
 #
 # The default user password for the document.
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption="password"
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.userpassword=
 
 #
 # The default owner password for the document.
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption="password"
+com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.ownerpassword=
 
