Updated the report configuration and the dialogs to support a configurable preferred and maximum size. Report1.xml and the jfreereport.properties show how to use that feature.

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -49,6 +49,27 @@ com.jrefinery.report.NoDefaultDebug=false
 # The following keys can be redefined for all report-instances.
 
 #
+# Defines a preferred size for the preview frame. Both width and height must be set,
+# proportional values are allowed (100%, 90% etc). They have the same syntax as the
+# proportional values in the xml definition.
+#
+# None of the values is defined by default
+#com.jrefinery.report.preview.PreferredWidth=640
+#com.jrefinery.report.preview.PreferredHeight=480
+
+#
+# Defines the maximum width for the preview frame. If the width is defined, a component
+# listener will be used to enforce the defined width.
+# The value is not defined by default
+#com.jrefinery.report.preview.MaximumWidth=800
+
+#
+# Defines the maximum height for the preview frame. If the height is defined, a component
+# listener will be used to enforce that value.
+# The value is not defined by default
+#com.jrefinery.report.preview.MaximumHeight=600
+
+#
 # The PDFTarget can be configured using these properties. This will create a default configuration
 # which can be altered by the programm using the usual operations.
 #
