BugFix: Layouting failed for relative-dimensioned elements + dynamic content.

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -21,7 +21,7 @@ com.jrefinery.report.LogLevel=Debug
 
 #
 # A URL to the JFreeReport-DTD if not specified in the Document
-#com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
+com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
 
 
 #
