BugFixes again. FontRenderer bug...

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -12,6 +12,19 @@
 com.jrefinery.report.LogLevel=Debug
 
 #
+# Enable aliasing for Graphics2D. This may result is textlayout errors.
+# If your text is not correctly aligned, disable this property.
+#
+com.jrefinery.report.targets.G2OutputTarget.useAliasing=true
+
+#
+# This is a override setting. Some Graphics2D implementations have problems
+# with the font positioning. I don't know a way to resolve that bug, try
+# setting this property to "true" to resolve wrong/buggy string draw results.
+#
+com.jrefinery.report.targets.G2OutputTarget.isBuggyFRC=true
+
+#
 # Where to log. Give a classname of a  valid LogTarget implementation.
 #com.jrefinery.report.LogTarget=com.jrefinery.report.util.SystemOutLogTarget
 
@@ -126,7 +139,7 @@ com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption=
 #
 # Warning: Specifying passwords in the property file can introduce a security risk.
 # Do not use these settings on the client side or in unprotected (world-readable) server environments.
-# In these cases use other means of defining the password. 
+# In these cases use other means of defining the password.
 
 #
 # The default user password for the document.
