--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -9,7 +9,7 @@
 
 #
 # The minimum loglevel that is logged
-com.jrefinery.report.LogLevel=Debug
+com.jrefinery.report.LogLevel=Info
 
 #
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
@@ -22,7 +22,7 @@ com.jrefinery.report.targets.G2OutputTarget.useAliasing=true
 # with the font positioning. I don't know a way to resolve that bug, try
 # setting this property to "true" to resolve wrong/buggy string draw results.
 #
-com.jrefinery.report.targets.G2OutputTarget.isBuggyFRC=true
+com.jrefinery.report.targets.G2OutputTarget.isBuggyFRC=false
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
@@ -36,10 +36,9 @@ com.jrefinery.report.targets.G2OutputTarget.isBuggyFRC=true
 # A URL to the JFreeReport-DTD if not specified in the Document
 com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
 
-
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
-# for debuggin only.
+# for debugging only.
 com.jrefinery.report.PrintOperationComment=false
 
 #
