PDFTarget-FontEncoding and Embedding was buggy, fixed. Report3.xml now shows how to configure Unicode-printing.

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -9,7 +9,7 @@
 
 #
 # The minimum loglevel that is logged
-com.jrefinery.report.LogLevel=Info
+com.jrefinery.report.LogLevel=Debug
 
 #
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
@@ -45,6 +45,7 @@ com.jrefinery.report.PrintOperationComment=false
 # Should the datarow print warning on invalid columns? Invalid column requests always
 # return null, if set to true, an additional logging entry is added
 com.jrefinery.report.WarnInvalidColumns=true
+
 #
 # The tablemodel factory mode for the ResultSetTableModelFactory
 # if set to "simple" the factory will always return a DefaultTableModel
@@ -89,7 +90,13 @@ com.jrefinery.report.NoDefaultDebug=false
 #
 # The default font-encoding for the OutputTarget.
 # Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encoding=iso-8859-1
+#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encoding=iso-8859-1
+
+#
+# Defines whether to embed fonts in the generated PDF. This will result in larger PDF
+# files, but makes sure that all characters are displayed properly. 
+#
+#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.EmbedFonts=true
 
 #
 # The author string of the document.
