--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -44,7 +44,7 @@ com.jrefinery.report.PrintOperationComment=false
 #
 # Should the datarow print warning on invalid columns? Invalid column requests always
 # return null, if set to true, an additional logging entry is added
-com.jrefinery.report.WarnInvalidColumns=true
+com.jrefinery.report.WarnInvalidColumns=false
 
 #
 # The tablemodel factory mode for the ResultSetTableModelFactory
