--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -90,7 +90,7 @@ com.jrefinery.report.NoDefaultDebug=false
 #
 # The default font-encoding for the OutputTarget.
 # Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
-#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encoding=iso-8859-1
+#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encoding=Identity-H
 
 #
 # Defines whether to embed fonts in the generated PDF. This will result in larger PDF
