CVS target now uses local dir as target for checkout.

--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -25,7 +25,7 @@
       <cvs cvsRoot=":pserver:anonymous@cvs.sourceforge.net:/cvsroot/jfreereport"
            package="jfreereport"
            compression="true" compressionlevel="5"
-           dest="jfreereport-cvs"
+           dest="."
         />
     </target>
 
